[package]
name = "cornell-box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#renderer = { git = "https://github.com/AdrienVannson/rust-renderer/", rev = "c809369bf5cfe06b4ec97e3bacea1e4d4e8ac35b" }
renderer = { path = "../../renderer" }
image = "0.24.5"